# kobuki_core

./: .cproject  .gitignore  .project  CHANGELOG.rst  CMakeLists.txt  README.markdown  README.md  _formulas.tex  acceleration__limiter_8hpp.html  acceleration__limiter_8hpp__dep__incl.map  acceleration__limiter_8hpp__dep__incl.md5  acceleration__limiter_8hpp__incl.map  acceleration__limiter_8hpp__incl.md5  acceleration__limiter_8hpp_source.html  annotated.html  annotated_dup.js  battery_8cpp.html  battery_8cpp__incl.map  battery_8cpp__incl.md5  battery_8hpp.html  battery_8hpp__dep__incl.map  battery_8hpp__dep__incl.md5  battery_8hpp__incl.map  battery_8hpp__incl.md5  battery_8hpp_source.html  buttons_8cpp.html  buttons_8cpp.js  buttons_8cpp__incl.map  buttons_8cpp__incl.md5  chirp_8cpp.html  chirp_8cpp.js  chirp_8cpp__incl.map  chirp_8cpp__incl.md5  class_kobuki_manager-members.html  class_kobuki_manager.html  class_kobuki_manager.js  class_rb2_vw-members.html  class_rb2_vw.html  class_rb2_vw.js  classes.html  (+685 more)
.github/workflows/: devel.yaml  pull_requests.yaml
debian/: postinst  udev
doc/: doxy.conf
include/kobuki_core/: command.hpp  dock_drive.hpp  event_manager.hpp  kobuki.hpp  logging.hpp  macros.hpp  modules.hpp  packets.hpp  parameters.hpp  version_info.hpp
include/kobuki_core/modules/: acceleration_limiter.hpp  battery.hpp  diff_drive.hpp  digital_output.hpp  led_array.hpp  sound.hpp
include/kobuki_core/packet_handler/: packet_finder.hpp  payload_base.hpp  payload_headers.hpp
include/kobuki_core/packets/: cliff.hpp  controller_info.hpp  core_sensors.hpp  current.hpp  dock_ir.hpp  eeprom.hpp  firmware.hpp  gp_input.hpp  hardware.hpp  inertia.hpp  three_axis_gyro.hpp  unique_device_id.hpp
include/kobuki_driver/: command.hpp  dock_drive.hpp  modules.hpp  version_info.hpp
include/kobuki_driver/modules/: diff_drive.hpp  led_array.hpp  sound.hpp
include/kobuki_driver/packet_handler/: payload_base.hpp  payload_headers.hpp
include/kobuki_driver/packets/: cliff.hpp  dock_ir.hpp  firmware.hpp  gp_input.hpp  inertia.hpp  three_axis_gyro.hpp
kobuki_core/: CHANGELOG.rst  package.xml
kobuki_dock_drive/: CHANGELOG.rst  CMakeLists.txt  package.xml
kobuki_dock_drive/include/kobuki_dock_drive/: dock_drive.hpp  state.hpp
kobuki_dock_drive/src/: dock_drive.cpp  dock_drive_debug.cpp  dock_drive_states.cpp
kobuki_driver/: .cproject  .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
kobuki_driver/.github/workflows/: devel.yaml  pull_requests.yaml
kobuki_driver/debian/: postinst
kobuki_driver/doc/: Makefile  doxy.conf  mainpage.dox
kobuki_driver/doc/english/: en_getting_started.dox
kobuki_driver/include/kobuki_driver/: command.hpp  event_manager.hpp  kobuki.hpp  macros.hpp  modules.hpp  packets.hpp  parameters.hpp  version_info.hpp
kobuki_driver/include/kobuki_driver/modules/: acceleration_limiter.hpp  battery.hpp  digital_output.hpp
kobuki_driver/include/kobuki_driver/packet_handler/: packet_finder.hpp
kobuki_driver/include/kobuki_driver/packets/: cliff.hpp  controller_info.hpp  core_sensors.hpp  current.hpp  dock_ir.hpp  eeprom.hpp  firmware.hpp  gp_input.hpp  hardware.hpp  inertia.hpp  three_axis_gyro.hpp  unique_device_id.hpp
kobuki_driver/src/demos/: CMakeLists.txt  chirp.cpp  initialisation.cpp  sigslots.cpp  simple_loop.cpp  stream.cpp  velocity_commands.cpp
kobuki_driver/src/driver/: battery.cpp  command.cpp  core_sensors.cpp  diff_drive.cpp  dock_drive.cpp  event_manager.cpp  kobuki.cpp  packet_finder.cpp
kobuki_driver/src/tools/: simple_keyop.cpp
kobuki_firmware/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
kobuki_firmware/firmware/: MD5SUMS  README.md  kobuki_firmware_0.0.1.hex  kobuki_firmware_1.0.0.hex  kobuki_firmware_1.1.0.hex  kobuki_firmware_1.1.1.hex  kobuki_firmware_1.1.2.hex  kobuki_firmware_1.1.3.hex  kobuki_firmware_1.1.4.hex  kobuki_firmware_1.2.0.hex
kobuki_ftdi/include/kobuki_ftdi/: writer.hpp
kobuki_ftdi/src/: ftdi_kobuki.cpp
resources/: colcon.pkg  kobuki_standalone.repos  venv.bash
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  (+56 more)
src/demos/: CMakeLists.txt  buttons.cpp  chirp.cpp  custom_logging.cpp  data_stream.cpp  log_levels.cpp  raw_data_stream.cpp  simple_loop.cpp  stream.cpp  velocity_commands.cpp
src/driver/: CMakeLists.txt  battery.cpp  command.cpp  core_sensors.cpp  diff_drive.cpp  dock_drive.cpp  dock_drive_debug.cpp  dock_drive_states.cpp  event_manager.cpp  firmware.cpp  kobuki.cpp  logging.cpp  packet_finder.cpp  version_info.cpp.in
src/tools/: CMakeLists.txt  simple_keyop.cpp  version_info.cpp
