<?xml version="1.0"?>
<package format="2">
  <name>kobuki_core</name>
  <version>0.8.1</version>
  <description>
    Non-ROS software for Kobuki, Yujin Robot's mobile research base.
  </description>
  <author>Daniel Stonier</author>
  <author>Younghun Ju</author>
  <author>Jorge Santos Simon</author>
  <author>Marcus Liebhardt</author>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/kobuki-base/kobuki_core/issues</url>
  <url type="repository">https://github.com/kobuki-base/kobuki_core</url>
  <url type="website">https://index.ros.org/k/kobuki_core/github-kobuki-base-kobuki_core</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>kobuki_dock_drive</exec_depend>
  <exec_depend>kobuki_driver</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
