##############################################################################
# Cmake
##############################################################################

cmake_minimum_required(VERSION 3.5)
project(kobuki_firmware)

##############################################################################
# Find Packages
##############################################################################

find_package(ament_cmake_ros REQUIRED)

##############################################################################
# Platform Configuration
##############################################################################

ament_package_xml()

##############################################################################
# Install
##############################################################################

install(
  DIRECTORY firmware
  DESTINATION share/${PROJECT_NAME}
)

install(
  DIRECTORY utilities
  DESTINATION share/${PROJECT_NAME}
)

##############################################################################
# Exports
##############################################################################

ament_package()
